# Django-React

./: pyproject.toml
djangj_react_proj/: apps.py
logrocket/: asgi.py  settings.py  urls.py  wsgi.py
students/: models.py  views.py
students-fe/: package-lock.json
students-fe/src/: App.js
students-fe/src/components/: ConfirmRemovalModal.js  Header.js  Home.js  NewStudentForm.js
students/migrations/: 0001_initial.py  0002_students.py
